Fixed tab spacing in Chrome for lightboxes

--- a/media/css/nootabs.css
+++ b/media/css/nootabs.css
@@ -154,7 +154,7 @@ div.nootabs-tab {
 }
 
 #resource-tabs {
-    margin: 18px 0;
+    margin: 0;
 }
 
 #resource-tabs p.no-resources {
